objects/disco__Form__c.object
<CustomObject>
    <fields>
        <fullName>Add_Trip_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Trip 10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_Trip_11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Trip 11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_Trip_12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Trip 12</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Document_Number__c</fullName>
        <formula>disco__Form_Template__r.FSL_Document_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Form_Edit_Link__c</fullName>
        <formula>HYPERLINK( &quot;/apex/disco__CompleteForm?id=&quot;&amp;Id, &quot;Click to Edit Form&quot;)</formula>
        <label>Form Edit Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Form_Name__c</fullName>
        <formula>disco__Form_Template__r.Name &amp; &quot;: &quot; &amp;  TEXT(LastModifiedDate)</formula>
        <label>Form Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Form_Owner__c</fullName>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
        <label>Form Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_One_Form_Per_Service_Order__c</fullName>
        <formula>Form_Template_Matrix__r.One_Form_Per_Service_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One Form Per Service Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Edit_Date__c</fullName>
        <formula>if( disco__Form_Edited__c  = True , NOW(), NULL )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Edit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form_Template_Matrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Template Matrix</label>
        <referenceTo>FSL_Form_Template_Matrix__c</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Generate_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_FormsHistory__c</fullName>
        <label>Last Modified By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Service Order Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_FormsHistory__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Name_and_Form_Number__c</fullName>
        <formula>disco__Form_Template_Name__c &amp; &quot; &quot; &amp; &quot;|&quot; &amp; &quot; &quot; &amp; Name</formula>
        <label>Template Name and Form Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_In_1__c</fullName>
        <label>Time In 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_In_2__c</fullName>
        <label>Time In 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_In_3__c</fullName>
        <label>Time In 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Out_1__c</fullName>
        <label>Time Out 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Out_2__c</fullName>
        <label>Time Out 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Out_3__c</fullName>
        <label>Time Out 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Time_1__c</fullName>
        <formula>(Time_Out_1__c -  Time_In_1__c) * 24 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_2__c</fullName>
        <formula>( Time_Out_2__c -  Time_In_2__c ) * 24 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_3__c</fullName>
        <formula>(Time_Out_3__c -  Time_In_3__c) * 24 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_HoursMins__c</fullName>
        <formula>TEXT(FLOOR(Total_Time__c / 60))
&amp;&apos;hr&apos;&amp; &apos; &apos; &amp;
TEXT(MOD(Total_Time__c ,60))
&amp;&apos;min&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time HoursMins</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <formula>Total_Time_1__c +  Total_Time_2__c +  Total_Time_3__c +  Total_Time_4__c  +  Total_Time_5__c +  Total_Time_6__c  +  Total_Time_7__c +  Total_Time_8__c +  Total_Time_9__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WWID__c</fullName>
        <formula>Owner:User.IAM_UID__c</formula>
        <label>WWID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wortype__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Type</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X3_Minutes_to_last_modified_date__c</fullName>
        <formula>LastModifiedDate + (1/2880)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3 Minutes to last modified date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>disco_LastModifiedDate_FormsHitsory__c</fullName>
        <description>Created this field to capure last modified date of a form on Forms History</description>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>disco__ArchiveText1__c</fullName>
        <label>ArchiveText1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__ArchiveText2__c</fullName>
        <label>ArchiveText2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__ArchiveText3__c</fullName>
        <label>ArchiveText3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Archived_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Archived By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Archived_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Archived_On__c</fullName>
        <inlineHelpText>date/time answers where archived</inlineHelpText>
        <label>Archived On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>disco__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If true, answers for this form have been archived</inlineHelpText>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Created_By__c</fullName>
        <formula>CreatedBy.FirstName &amp; &apos; &apos; &amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__File_Count__c</fullName>
        <description>Number of Files attached to the Form</description>
        <inlineHelpText>Number of Files attached to the Form. Automatically set.</inlineHelpText>
        <label>File Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__File_Info__c</fullName>
        <description>Information on file attachments</description>
        <inlineHelpText>Information on file attachments</inlineHelpText>
        <label>File Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Form_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Form_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Form_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Form_Edited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true on save in Complete Form page and Youreka Mobile. Used to determine Status.</description>
        <inlineHelpText>Set to true on save in Complete Form page and Youreka Mobile. Used to determine Status.</inlineHelpText>
        <label>Form Edited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Form_Generation_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For automatically generated forms, the job that generated it</description>
        <inlineHelpText>For automatically generated forms, the job that generated it</inlineHelpText>
        <label>Form Generation Job</label>
        <referenceTo>disco__Form_Generation_Job__c</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Form_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Form_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Form_Template_Name__c</fullName>
        <formula>disco__Form_Template__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Template Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Form_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Template</label>
        <referenceTo>disco__Form_Template__c</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Full_Save_Error__c</fullName>
        <description>if a system save error is encountered while saving a forms answers the message will appear here</description>
        <inlineHelpText>if a system save error is encountered while saving a forms answers the message will appear here</inlineHelpText>
        <label>Full Save Error</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Last_Modified_By__c</fullName>
        <formula>LastModifiedBy.FirstName &amp; &apos; &apos; &amp; LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to determine if the Form has been completed and will not be updated again.  This field is updated by the &quot;Lock Form&quot; button and is not visible on the page layout.</description>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Mobile_Available_Users__c</fullName>
        <description>Comma separated list of UserIds that will have this form available in Youreka Mobile</description>
        <inlineHelpText>Comma separated list of UserIds that will have this form available in Youreka Mobile</inlineHelpText>
        <label>Mobile Available Users</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Mobile_Available__c</fullName>
        <defaultValue>true</defaultValue>
        <description>check if this form should be available for download in the Youreka mobile app</description>
        <inlineHelpText>check if this form should be available for download in the Youreka mobile app</inlineHelpText>
        <label>Mobile Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Mobile_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>external ID for mobile</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>disco__Most_Recent_Mobile_Location__c</fullName>
        <description>Most recent location of form save via Youreka Mobile App</description>
        <inlineHelpText>Most recent location of form save via Youreka Mobile App</inlineHelpText>
        <label>Most Recent Mobile Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>disco__My_Form__c</fullName>
        <formula>OwnerId =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Needs_Answers_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate that the queueable job needs to create the answers for this form</description>
        <inlineHelpText>Flag to indicate that the queueable job needs to create the answers for this form</inlineHelpText>
        <label>Needs Answers Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Original_Submitted_Date__c</fullName>
        <description>User that first submitted the form. This value is not changed on a re-submit.</description>
        <inlineHelpText>User that first submitted the form. This value is not changed on a re-submit.</inlineHelpText>
        <label>Original Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>disco__Originally_Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that first submitted the form. This value is not changed on a re-submit.</description>
        <inlineHelpText>User that first submitted the form. This value is not changed on a re-submit.</inlineHelpText>
        <label>Originally Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms_Submitted</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Redirect_After_Save__c</fullName>
        <description>By placing a Salesforce record id in this field, youreka will redirect the user to this record after clicking Save on a Form</description>
        <inlineHelpText>By placing a Salesforce record id in this field, youreka will redirect the user to this record after clicking Save on a Form</inlineHelpText>
        <label>Redirect After Save</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Save_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Status__c</fullName>
        <formula>IF ( disco__Archived__c  = true, 
        &quot;ARCHIVED&quot;, 
        IF( disco__Locked__c = true, 
            &quot;LOCKED&quot;,  
            IF( disco__Save_Complete__c = true, 
                &quot;SUBMITTED&quot;,  
                IF ( disco__Form_Edited__c,
                    &quot;IN PROGRESS&quot;, 
                    &quot;NEW&quot;
                            ) 
                    ) 
           ) 
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Form</label>
    <listViews>
        <fullName>disco__All</fullName>
        <columns>NAME</columns>
        <columns>disco__Form_Template__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>disco__Locked__c</columns>
        <columns>disco__Archived__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>disco__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>disco__Status_Archived</fullName>
        <columns>NAME</columns>
        <columns>disco__Form_Template__c</columns>
        <columns>disco__Archived_By__c</columns>
        <columns>disco__Archived_On__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>disco__Status__c</field>
            <operation>equals</operation>
            <value>ARCHIVED</value>
        </filters>
        <label>Status: Archived</label>
    </listViews>
    <listViews>
        <fullName>disco__Status_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>disco__Form_Template__c</columns>
        <columns>disco__Full_Save_Error__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>disco__Status__c</field>
            <operation>equals</operation>
            <value>IN PROGRESS</value>
        </filters>
        <label>Status: In Progress</label>
    </listViews>
    <listViews>
        <fullName>disco__Status_Locked</fullName>
        <columns>NAME</columns>
        <columns>disco__Form_Template__c</columns>
        <columns>disco__Created_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>disco__Status__c</field>
            <operation>equals</operation>
            <value>LOCKED</value>
        </filters>
        <label>Status: Locked</label>
    </listViews>
    <listViews>
        <fullName>disco__Status_New</fullName>
        <columns>NAME</columns>
        <columns>disco__Form_Template__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>disco__Created_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>disco__Status__c</field>
            <operation>equals</operation>
            <value>NEW</value>
        </filters>
        <label>Status: New</label>
    </listViews>
    <listViews>
        <fullName>disco__Status_Submitted</fullName>
        <columns>NAME</columns>
        <columns>disco__Form_Template__c</columns>
        <columns>disco__Originally_Submitted_By__c</columns>
        <columns>disco__Original_Submitted_Date__c</columns>
        <columns>disco__Created_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>disco__Status__c</field>
            <operation>equals</operation>
            <value>SUBMITTED</value>
        </filters>
        <label>Status: Submitted</label>
    </listViews>
    <nameField>
        <displayFormat>F-{00000000}</displayFormat>
        <label>Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <sharingModel>Read</sharingModel>
    <sharingReasons>
        <fullName>AllowMultipleResourcesToAccessOneForm__c</fullName>
        <label>AllowMultipleResourcesToAccessOneForm</label>
    </sharingReasons>
    <validationRules>
        <fullName>disco__Form_Template_Required</fullName>
        <active>true</active>
        <description>all forms require form templates</description>
        <errorConditionFormula>disco__Form_Template__c == null</errorConditionFormula>
        <errorMessage>All forms require form templates</errorMessage>
    </validationRules>
</CustomObject>